# fileresque

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  Makefile  README.md  biome.json  deny.toml  package.json  svelte.config.js  vite.config.ts
.claude/: settings.json
.claude/agents/: designer.md  developer.md  qa.md  security.md  tpm.md
.claude/hooks/: guard-disk.py
.claude/skills/fluid-animation/: SKILL.md
.claude/skills/fluid-animation/reference/: anti-patterns-checklist.md  layers-implementation.md  performance.md  platform-systems.md  timing-and-curves.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/disk/: Cargo.toml
crates/disk/src/: fsinfo.rs  lib.rs
crates/disk/src/macos/: enumerate.rs  mod.rs  permissions.rs
crates/disk/src/macos/apfs/: mod.rs  reader.rs  scanner.rs  spaceman.rs  structs.rs
crates/disk/src/macos/hfsplus/: mod.rs  scanner.rs  structs.rs
crates/disk/src/windows/: enumerate.rs  ioctl.rs  mod.rs
crates/disk/src/windows/ntfs/: mod.rs  scanner.rs  structs.rs
crates/recovery/: Cargo.toml
crates/recovery/src/: audit.rs  engine.rs  lib.rs  preflight.rs  probability.rs
docs/: structure.md
docs/agent-planning/: 01-p0-project-scaffold.md  02-p0-ci-pipeline.md  03-p0-design-system.md  04-p0-entitlements.md  05-p1-disk-enum-macos.md  06-p1-disk-enum-windows.md  07-p1-permission-onboarding.md  08-p1-disk-list-ui.md  09-p2-apfs-parser.md  10-p2-hfsplus-parser.md  11-p2-ntfs-parser.md  12-p2-scan-progress.md  13-p2-scan-results-ui.md  14-p3-block-checker.md  15-p3-probability-ui.md  16-p4-destination-preflight.md  17-p4-recovery-engine.md  18-p4-recovery-ui.md  19-p4-audit-log.md  22-p5-error-recovery.md  23-p5-accessibility.md  24-p5-security-audit.md  Readme.md  decisions.md
docs/architecture/: system-architecture.md
docs/design/: design-brief.md
docs/features/: feature-breakdown-phase.md
scripts/: smoke.sh
site/: index.html
src/: app.css
src-tauri/: Cargo.toml  entitlements.mac.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: disk_watch.rs  lib.rs  main.rs  panic_log.rs  windows-manifest.xml
src-tauri/src/commands/: mod.rs  recovery.rs  scan.rs
src/lib/: index.ts  types.ts
src/lib/components/: Badge.svelte  Button.svelte  Button.test.ts  Card.svelte  DiskList.svelte  DiskList.test.ts  ErrorBoundary.svelte  ErrorBoundary.test.ts  FileTable.svelte  FileTable.test.ts  Modal.svelte  Modal.test.ts  PermissionGate.svelte  PermissionGate.test.ts  PermissionModal.svelte  ProbabilityPanel.svelte  ProbabilityPanel.test.ts  ProgressBar.svelte  ProgressBar.test.ts  RecoveryModal.svelte  RecoveryModal.test.ts  index.ts
src/lib/styles/: tokens.css  tokens.css.bak
src/lib/utils/: format.test.ts  format.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  page.test.ts
